Updates from Overleaf

--- a/Latex/references.bib
+++ b/Latex/references.bib
@@ -324,3 +324,209 @@ doi = {10.48550/arXiv.1712.00303}
    author={Salinas, Vachail N. and Hogerheijde, Michiel R. and Bergin, Edwin A. and Ilsedore Cleeves, L. and Brinch, Christian and Blake, Geoffrey A. and Lis, Dariusz C. and Melnick, Gary J. and Panić, Olja and Pearson, John C. and Kristensen, Lars and Yıldız, Umut A. and van Dishoeck, Ewine F.},
    year={2016},
    month=jun, pages={A122} }
+
+@misc{vlasblom2023midinfraredspectrattauri,
+      title={Mid-infrared spectra of T Tauri disks: Modeling the effects of a small inner cavity on CO2 and H2O emission}, 
+      author={Marissa Vlasblom and Ewine F. van Dishoeck and Benoît Tabone and Simon Bruderer},
+      year={2023},
+      eprint={2311.12445},
+      archivePrefix={arXiv},
+      primaryClass={astro-ph.EP},
+      url={https://arxiv.org/abs/2311.12445}, 
+}
+
+@article{Andrews_2016,
+   title={RINGED SUBSTRUCTURE AND A GAP AT 1 au IN THE NEAREST PROTOPLANETARY DISK},
+   volume={820},
+   ISSN={2041-8213},
+   url={http://dx.doi.org/10.3847/2041-8205/820/2/L40},
+   DOI={10.3847/2041-8205/820/2/l40},
+   number={2},
+   journal={The Astrophysical Journal Letters},
+   publisher={American Astronomical Society},
+   author={Andrews, Sean M. and Wilner, David J. and Zhu, Zhaohuan and Birnstiel, Tilman and Carpenter, John M. and Pérez, Laura M. and Bai, Xue-Ning and Öberg, Karin I. and Hughes, A. Meredith and Isella, Andrea and Ricci, Luca},
+   year={2016},
+   month=mar, pages={L40} }
+
+
+@article{ALMA2015,
+   title={THE 2014 ALMA LONG BASELINE CAMPAIGN: FIRST RESULTS FROM HIGH ANGULAR RESOLUTION OBSERVATIONS TOWARD THE HL TAU REGION},
+   volume={808},
+   ISSN={2041-8213},
+   url={http://dx.doi.org/10.1088/2041-8205/808/1/L3},
+   DOI={10.1088/2041-8205/808/1/l3},
+   number={1},
+   journal={The Astrophysical Journal},
+   publisher={American Astronomical Society},
+   author={Brogan, C. L. and Pérez, L. M. and Hunter, T. R. and Dent, W. R. F. and Hales, A. S. and Hills, R. E. and Corder, S. and Fomalont, E. B. and Vlahakis, C. and Asaki, Y. and Barkats, D. and Hirota, A. and Hodge, J. A. and Impellizzeri, C. M. V. and Kneissl, R. and Liuzzo, E. and Lucas, R. and Marcelino, N. and Matsushita, S. and Nakanishi, K. and Phillips, N. and Richards, A. M. S. and Toledo, I. and Aladro, R. and Broguiere, D. and Cortes, J. R. and Cortes, P. C. and Espada, D. and Galarza, F. and Appadoo, D. Garcia- and Ramirez, L. Guzman- and Humphreys, E. M. and Jung, T. and Kameno, S. and Laing, R. A. and Leon, S. and Marconi, G. and Mignano, A. and Nikolic, B. and Nyman, L.-A. and Radiszcz, M. and Remijan, A. and Rodón, J. A. and Sawada, T. and Takahashi, S. and Tilanus, R. P. J. and Vilaro, B. Vila and Watson, L. C. and Wiklind, T. and Akiyama, E. and Chapillon, E. and Monsalvo, I. de Gregorio- and Francesco, J. Di and Gueth, F. and Kawamura, A. and Lee, C.-F. and Luong, Q. Nguyen and Mangum, J. and Pietu, V. and Sanhueza, P. and Saigo, K. and Takakuwa, S. and Ubach, C. and Kempen, T. van and Wootten, A. and Carrizo, A. Castro- and Francke, H. and Gallardo, J. and Garcia, J. and Gonzalez, S. and Hill, T. and Kaminski, T. and Kurono, Y. and Liu, H.-Y. and Lopez, C. and Morales, F. and Plarre, K. and Schieven, G. and Testi, L. and Videla, L. and Villard, E. and Andreani, P. and Hibbard, J. E. and Tatematsu, K.},
+   year={2015},
+   month=jul, pages={L3} }
+
+@article{Kamp_2023,
+   title={The chemical inventory of the inner regions of planet-forming disks – the JWST/MINDS program},
+   volume={245},
+   ISSN={1364-5498},
+   url={http://dx.doi.org/10.1039/D3FD00013C},
+   DOI={10.1039/d3fd00013c},
+   journal={Faraday Discussions},
+   publisher={Royal Society of Chemistry (RSC)},
+   author={Kamp, Inga and Henning, Thomas and Arabhavi, Aditya M. and Bettoni, Giulio and Christiaens, Valentin and Gasman, Danny and Grant, Sierra L. and Morales-Calderón, Maria and Tabone, Benoît and Abergel, Alain and Absil, Olivier and Argyriou, Ioannis and Barrado, David and Boccaletti, Anthony and Bouwman, Jeroen and Caratti o Garatti, Alessio and van Dishoeck, Ewine F. and Geers, Vincent and Glauser, Adrian M. and Güdel, Manuel and Guadarrama, Rodrigo and Jang, Hyerin and Kanwar, Jayatee and Lagage, Pierre-Olivier and Lahuis, Fred and Mueller, Michael and Nehmé, Cyrine and Olofsson, Göran and Pantin, Eric and Pawellek, Nicole and Perotti, Giulia and Ray, Tom P. and Rodgers-Lee, Donna and Samland, Matthias and Scheithauer, Silvia and Schreiber, Jürgen and Schwarz, Kamber and Temmink, Milou and Vandenbussche, Bart and Vlasblom, Marissa and Waelkens, Christoffel and Waters, L. B. F. M. and Wright, Gillian},
+   year={2023},
+   pages={112–137} }
+
+@article{Andrews_2018,
+   title={The Disk Substructures at High Angular Resolution Project (DSHARP). I. Motivation, Sample, Calibration, and Overview},
+   volume={869},
+   ISSN={2041-8213},
+   url={http://dx.doi.org/10.3847/2041-8213/aaf741},
+   DOI={10.3847/2041-8213/aaf741},
+   number={2},
+   journal={The Astrophysical Journal Letters},
+   publisher={American Astronomical Society},
+   author={Andrews, Sean M. and Huang, Jane and Pérez, Laura M. and Isella, Andrea and Dullemond, Cornelis P. and Kurtovic, Nicolás T. and Guzmán, Viviana V. and Carpenter, John M. and Wilner, David J. and Zhang, Shangjia and Zhu, Zhaohuan and Birnstiel, Tilman and Bai, Xue-Ning and Benisty, Myriam and Hughes, A. Meredith and Öberg, Karin I. and Ricci, Luca},
+   year={2018},
+   month=dec, pages={L41} }
+
+@ARTICLE{1987ARA&A..25...23S,
+       author = {{Shu}, Frank H. and {Adams}, Fred C. and {Lizano}, Susana},
+        title = "{Star formation in molecular clouds: observation and theory.}",
+      journal = {\araa},
+     keywords = {Astrophysics, Molecular Clouds, Star Formation, Stellar Models, Astronomical Maps, Binary Stars, Gravitational Collapse, Protostars, Star Clusters, Stellar Mass, Astrophysics, Molecular Clouds:Star Formation, Pre-Main-Sequence Stars:Star Formation, Protostars:Stellar Evolution, Star Formation:Molecular Clouds, Star Formation:Pre-Main-Sequence Stars, Stellar Evolution:Protostars},
+         year = 1987,
+        month = jan,
+       volume = {25},
+        pages = {23-81},
+          doi = {10.1146/annurev.aa.25.090187.000323},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1987ARA&A..25...23S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2023PASP..135d8003W,
+       author = {{Wright}, Gillian S. and {Rieke}, George H. and {Glasse}, Alistair and {Ressler}, Michael and {Garc{\'\i}a Mar{\'\i}n}, Macarena and {Aguilar}, Jonathan and {Alberts}, Stacey and {{\'A}lvarez-M{\'a}rquez}, Javier and {Argyriou}, Ioannis and {Banks}, Kimberly and {Baudoz}, Pierre and {Boccaletti}, Anthony and {Bouchet}, Patrice and {Bouwman}, Jeroen and {Brandl}, Bernard R. and {Breda}, David and {Bright}, Stacey and {Cale}, Steven and {Colina}, Luis and {Cossou}, Christophe and {Coulais}, Alain and {Cracraft}, Misty and {De Meester}, Wim and {Dicken}, Daniel and {Engesser}, Michael and {Etxaluze}, Mireya and {Fox}, Ori D. and {Friedman}, Scott and {Fu}, Henry and {Gasman}, Danny and {G{\'a}sp{\'a}r}, Andr{\'a}s and {Gastaud}, Ren{\'e} and {Geers}, Vincent and {Glauser}, Adrian Michael and {Gordon}, Karl D. and {Greene}, Thomas and {Greve}, Thomas R. and {Grundy}, Timothy and {G{\"u}del}, Manuel and {Guillard}, Pierre and {Haderlein}, Peter and {Hashimoto}, Ryan and {Henning}, Thomas and {Hines}, Dean and {Holler}, Bryan and {Detre}, {\"O}rs Hunor and {Jahromi}, Amir and {James}, Bryan and {Jones}, Olivia C. and {Justtanont}, Kay and {Kavanagh}, Patrick and {Kendrew}, Sarah and {Klaassen}, Pamela and {Krause}, Oliver and {Labiano}, Alvaro and {Lagage}, Pierre-Olivier and {Lambros}, Scott and {Larson}, Kirsten and {Law}, David and {Lee}, David and {Libralato}, Mattia and {Lorenzo Alverez}, Jose and {Meixner}, Margaret and {Morrison}, Jane and {Mueller}, Migo and {Murray}, Katherine and {Mycroft}, Matthew and {Myers}, Richard and {Nayak}, Omnarayani and {Naylor}, Bret and {Nickson}, Bryony and {Noriega-Crespo}, Alberto and {{\"O}stlin}, G{\"o}ran and {O'Sullivan}, Brian and {Ottens}, Richard and {Patapis}, Polychronis and {Penanen}, Konstantin and {Pietraszkiewicz}, Martin and {Ray}, Tom and {Regan}, Michael and {Roteliuk}, Anthony and {Royer}, Pierre and {Samara-Ratna}, Piyal and {Samuelson}, Bridget and {Sargent}, Beth A. and {Scheithauer}, Silvia and {Schneider}, Analyn and {Schreiber}, J{\"u}rgen and {Shaughnessy}, Bryan and {Sheehan}, Evan and {Shivaei}, Irene and {Sloan}, G.~C. and {Tamas}, Laszlo and {Teague}, Kelly and {Temim}, Tea and {Tikkanen}, Tuomo and {Tustain}, Samuel and {van Dishoeck}, Ewine F. and {Vandenbussche}, Bart and {Weilert}, Mark and {Whitehouse}, Paul and {Wolff}, Schuyler},
+        title = "{The Mid-infrared Instrument for JWST and Its In-flight Performance}",
+      journal = {\pasp},
+     keywords = {Space vehicle instruments, Astronomical instrumentation, 1548, 799},
+         year = 2023,
+        month = apr,
+       volume = {135},
+       number = {1046},
+          eid = {048003},
+        pages = {048003},
+          doi = {10.1088/1538-3873/acbe66},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2023PASP..135d8003W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{ chap13,
+	author = {{Kamp, Inga}},
+	title = {Modeling and interpretation of line observations*},
+	DOI= "10.1051/epjconf/201510200013",
+	url= "https://doi.org/10.1051/epjconf/201510200013",
+	journal = {EPJ Web of Conferences},
+	year = 2015,
+	volume = 102,
+	pages = "00013",
+}
+
+@article{ chap1,
+	author = {{Dominik, Carsten}},
+	title = {Disk formation and structure*},
+	DOI= "10.1051/epjconf/201510200002",
+	url= "https://doi.org/10.1051/epjconf/201510200002",
+	journal = {EPJ Web of Conferences},
+	year = 2015,
+	volume = 102,
+	pages = "00002",
+}
+
+@ARTICLE{1964ApJ...139.1217T,
+       author = {{Toomre}, A.},
+        title = "{On the gravitational stability of a disk of stars.}",
+      journal = {\apj},
+         year = 1964,
+        month = may,
+       volume = {139},
+        pages = {1217-1238},
+          doi = {10.1086/147861},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1964ApJ...139.1217T},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{pressetal,
+author = {Press, William and Fortran, In and Teukolsky, Saul and Vetterling, William and Flannery, Brian},
+year = {1992},
+month = {01},
+pages = {},
+title = {Numerical Recipes},
+journal = {Cambridge, UK, Cambridge University Press}
+}
+
+@ARTICLE{Avnietal,
+       author = {{Avni}, Y.},
+        title = "{Energy spectra of X-ray clusters of galaxies.}",
+      journal = {\apj},
+     keywords = {Energy Spectra, Galactic Clusters, Statistical Analysis, X Ray Sources, X Ray Spectra, Computerized Simulation, Monte Carlo Method, Range (Extremes), Spectral Energy Distribution, Spectrum Analysis, Astrophysics},
+         year = 1976,
+        month = dec,
+       volume = {210},
+        pages = {642-646},
+          doi = {10.1086/154870},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1976ApJ...210..642A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{firstnodetect,
+       author = {{Leemker}, M. and {Booth}, A.~S. and {van Dishoeck}, E.~F. and {van der Marel}, N. and {Tabone}, B. and {Ligterink}, N.~F.~W. and {Brunken}, N.~G.~C. and {Hogerheijde}, M.~R.},
+        title = "{A major asymmetric ice trap in a planet-forming disk. IV. Nitric oxide gas and a lack of CN tracing sublimating ices and a C/O ratio <1}",
+      journal = {\aap},
+     keywords = {astrochemistry, protoplanetary disks, ISM: molecules, submillimeter: planetary systems, stars: individual: IRS 48, Astrophysics - Earth and Planetary Astrophysics, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2023,
+        month = may,
+       volume = {673},
+          eid = {A7},
+        pages = {A7},
+          doi = {10.1051/0004-6361/202245662},
+archivePrefix = {arXiv},
+       eprint = {2303.00768},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2023A&A...673A...7L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{ Diskcomp,
+	author = {{Barri\`{e}re-Fouchet, L.} and {Gonzalez, J.-F.} and {Murray, J. R.} and {Humble, R. J.} and {Maddison, S. T.}},
+	title = {Dust distribution in protoplanetary disks - Vertical settling and radial migration},
+	DOI= "10.1051/0004-6361:20042249",
+	url= "https://doi.org/10.1051/0004-6361:20042249",
+	journal = {A&A},
+	year = 2005,
+	volume = 443,
+	number = 1,
+	pages = "185-194",
+}
+
+@article{Furlan_2016,
+   title={THE HERSCHEL ORION PROTOSTAR SURVEY: SPECTRAL ENERGY DISTRIBUTIONS AND FITS USING A GRID OF PROTOSTELLAR MODELS},
+   volume={224},
+   ISSN={1538-4365},
+   url={http://dx.doi.org/10.3847/0067-0049/224/1/5},
+   DOI={10.3847/0067-0049/224/1/5},
+   number={1},
+   journal={The Astrophysical Journal Supplement Series},
+   publisher={American Astronomical Society},
+   author={Furlan, E. and Fischer, W. J. and Ali, B. and Stutz, A. M. and Stanke, T. and Tobin, J. J. and Megeath, S. T. and Osorio, M. and Hartmann, L. and Calvet, N. and Poteet, C. A. and Booker, J. and Manoj, P. and Watson, D. M. and Allen, L.},
+   year={2016},
+   month=may, pages={5} }
+
+@article{J_rgensen_2009,
+   title={PROSAC: a submillimeter array survey of low-mass protostars: II. The mass evolution of envelopes, disks, and stars from the Class 0 through I stages},
+   volume={507},
+   ISSN={1432-0746},
+   url={http://dx.doi.org/10.1051/0004-6361/200912325},
+   DOI={10.1051/0004-6361/200912325},
+   number={2},
+   journal={Astronomy &amp; Astrophysics},
+   publisher={EDP Sciences},
+   author={J{\o}rgensen, J. K. and van Dishoeck, E. F. and Visser, R. and Bourke, T. L. and Wilner, D. J. and Lommen, D. and Hogerheijde, M. R. and Myers, P. C.},
+   year={2009},
+   month=sep, pages={861–879} }
