added images for the presentation

--- a/AllFigures.ipynb
+++ b/AllFigures.ipynb
@@ -1,10 +1,13 @@
 {
  "cells": [
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-16T12:26:28.414517Z",
+     "start_time": "2025-06-16T12:26:23.902048Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "import prodimopy.read as pread\n",
     "import prodimopy.plot as pplot\n",
@@ -27,13 +30,18 @@
     "import warnings\n",
     "warnings.simplefilter(\"ignore\", DeprecationWarning)"
    ],
-   "id": "a9525b1589ab5adb"
+   "id": "a9525b1589ab5adb",
+   "outputs": [],
+   "execution_count": 1
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-16T12:26:28.555053Z",
+     "start_time": "2025-06-16T12:26:28.551551Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "def total_flux(wl, flux_nu):\n",
     "    \"\"\"\n",
@@ -52,13 +60,18 @@
     "    noise = np.random.normal(0, noise_level, size=flux.shape)\n",
     "    return flux + noise"
    ],
-   "id": "a719ad7307a08b64"
+   "id": "a719ad7307a08b64",
+   "outputs": [],
+   "execution_count": 2
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-16T12:26:34.940200Z",
+     "start_time": "2025-06-16T12:26:34.936802Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "\n",
     "plt.rcParams.update({\n",
@@ -71,9 +84,11 @@
     "})\n",
     "plt.rcParams['figure.figsize'] = [10, 6]\n",
     "plt.rcParams['figure.dpi'] = 150\n",
-    "plt.rcParams['savefig.dpi'] = 300"
+    "plt.rcParams['savefig.dpi'] = 600"
    ],
-   "id": "a2730296ac5c76c9"
+   "id": "a2730296ac5c76c9",
+   "outputs": [],
+   "execution_count": 3
   },
   {
    "metadata": {
