last presentation changes

--- a/AllFigures.ipynb
+++ b/AllFigures.ipynb
@@ -1914,10 +1914,13 @@
    "id": "513416a52cc2c7d5"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-18T21:28:00.284275Z",
+     "start_time": "2025-06-18T21:28:00.043732Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "species = ['CO', 'H2O']\n",
     "clip_min, clip_max = 5.1, 5.6\n",
@@ -1961,7 +1964,21 @@
     "\n",
     "plt.show()"
    ],
-   "id": "818db4690799645f"
+   "id": "818db4690799645f",
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mNameError\u001B[39m                                 Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[1]\u001B[39m\u001B[32m, line 3\u001B[39m\n\u001B[32m      1\u001B[39m species = [\u001B[33m'\u001B[39m\u001B[33mCO\u001B[39m\u001B[33m'\u001B[39m, \u001B[33m'\u001B[39m\u001B[33mH2O\u001B[39m\u001B[33m'\u001B[39m]\n\u001B[32m      2\u001B[39m clip_min, clip_max = \u001B[32m5.1\u001B[39m, \u001B[32m5.6\u001B[39m\n\u001B[32m----> \u001B[39m\u001B[32m3\u001B[39m \u001B[38;5;28;01mfor\u001B[39;00m i, row \u001B[38;5;129;01min\u001B[39;00m \u001B[43mdf\u001B[49m.iterrows():\n\u001B[32m      4\u001B[39m         \u001B[38;5;28;01mif\u001B[39;00m i != \u001B[32m12\u001B[39m:\n\u001B[32m      5\u001B[39m             \u001B[38;5;28;01mcontinue\u001B[39;00m\n",
+      "\u001B[31mNameError\u001B[39m: name 'df' is not defined"
+     ]
+    }
+   ],
+   "execution_count": 1
   },
   {
    "metadata": {},
